--- a/app/frontend/style.css
+++ b/app/frontend/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 header h1 {
+    font-family: 'Arial', sans-serif;
     color: white;
     font-size: 40px;
     padding: 1rem;
@@ -13,30 +14,32 @@ header h1 {
 }
 
 #chatLog {
-    width: 70%;
-    text-align: center;
+    font-size: 20px;
+    width: 60%;
+    text-align: left;
     height: 400px;
-    border: 1px solid #ccc;
+    border: 1px solid #0c0404;
     color: #ffffff;
-    background-color: rgba(190, 187, 206, 0.599);
+    background-color: rgba(24, 17, 64, 0.599);
     padding: 10px;
     overflow-y: auto;
-    margin: 10px;
+    margin-left: 18%;
 }
 
 #userInput {
-    width: 60%;
-    margin: 5px;
+    width: 50%;
+    margin-left: 18%;
     padding: 10px;
     border: 1px solid #090909;
     color: #000000;
 }
 
 #sendButton {
-    width: 10%;
+    font-size: 13px;
+    width: 9%;
     padding: 10px;
     border: 1px solid #ccc;
     cursor: pointer;
-    margin: 2px;
+    margin-left: 4px;
     text-align: center;
 }
